--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -160,15 +160,17 @@
   <ItemGroup>
     <ClCompile Include="..\glm-0.9.9.8\glm\detail\glm.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="DataFileHandler.cpp" />
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="EntityFileHandler.cpp" />
+    <ClCompile Include="EntityHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="GL_Context.cpp" />
     <ClCompile Include="ModeHandler.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -498,14 +500,16 @@
     <ClInclude Include="..\glm-0.9.9.8\glm\simd\trigonometric.h" />
     <ClInclude Include="..\glm-0.9.9.8\glm\simd\vector_relational.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DataFileHandler.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="Editor.h" />
     <ClInclude Include="Entity.h" />
-    <ClInclude Include="EntityFileHandler.h" />
+    <ClInclude Include="EntityHandler.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="GL_Context.h" />
     <ClInclude Include="ModeHandler.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderHandler.h" />
   </ItemGroup>
   <ItemGroup>
