--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="Shader.cpp">
       <Filter>ShaderHandler\Shader</Filter>
     </ClCompile>
+    <ClCompile Include="Timer.cpp">
+      <Filter>Utils\Timer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ExternalAPIs">
@@ -147,6 +150,15 @@
     </Filter>
     <Filter Include="ShaderHandler\Shader\include">
       <UniqueIdentifier>{7b048891-8f17-4c86-aa2e-6b2182ae0c24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utils">
+      <UniqueIdentifier>{663184c0-edb7-4bc6-8b37-edd246432dd4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utils\Timer">
+      <UniqueIdentifier>{3d579cf4-76e2-417b-bb70-8541329fccf1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utils\Timer\include">
+      <UniqueIdentifier>{18811d4a-eec2-4cbd-b86f-6e4b39a8dde3}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -1160,6 +1172,9 @@
     </ClInclude>
     <ClInclude Include="Shader.h">
       <Filter>ShaderHandler\Shader\include</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>Utils\Timer\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
