--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -115,7 +115,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\tball\Documents\SimpleEngine\ExternalAPIs\include\ImGUI;$(SolutionDir)lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;glew32.lib;assimp-vc140-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
@@ -158,6 +158,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui.cpp" />
+    <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_demo.cpp" />
+    <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_draw.cpp" />
+    <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_impl_glfw.cpp" />
+    <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_widgets.cpp" />
     <ClCompile Include="..\glm-0.9.9.8\glm\detail\glm.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DataFileHandler.cpp" />
@@ -165,6 +171,7 @@
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityHandler.cpp" />
+    <ClCompile Include="GuiContext.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="GL_Context.cpp" />
@@ -172,7 +179,6 @@
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderHandler.cpp" />
-    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\assimp\include\assimp\ai_assert.h" />
@@ -241,6 +247,14 @@
     <ClInclude Include="..\ExternalAPIs\include\GLM\vec3.hpp" />
     <ClInclude Include="..\ExternalAPIs\include\GLM\vec4.hpp" />
     <ClInclude Include="..\ExternalAPIs\include\GLM\vector_relational.hpp" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imconfig.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imgui.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imgui_impl_glfw.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imgui_impl_opengl3.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imgui_internal.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imstb_rectpack.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imstb_textedit.h" />
+    <ClInclude Include="..\ExternalAPIs\include\ImGUI\imstb_truetype.h" />
     <ClInclude Include="..\glm-0.9.9.8\glm\detail\compute_common.hpp" />
     <ClInclude Include="..\glm-0.9.9.8\glm\detail\compute_vector_relational.hpp" />
     <ClInclude Include="..\glm-0.9.9.8\glm\detail\qualifier.hpp" />
@@ -506,13 +520,13 @@
     <ClInclude Include="Editor.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityHandler.h" />
+    <ClInclude Include="GuiContext.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="GL_Context.h" />
     <ClInclude Include="ModeHandler.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderHandler.h" />
-    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\assimp\include\assimp\.editorconfig" />
