--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_impl_opengl3.cpp" />
     <ClCompile Include="..\ExternalAPIs\include\ImGUI\imgui_widgets.cpp" />
     <ClCompile Include="..\glm-0.9.9.8\glm\detail\glm.cpp" />
+    <ClCompile Include="BoxCollider.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DataFileHandler.cpp" />
     <ClCompile Include="Debug.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="GL_Context.cpp" />
     <ClCompile Include="ModeHandler.cpp" />
+    <ClCompile Include="MouseRay.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderHandler.cpp" />
@@ -514,6 +516,7 @@
     <ClInclude Include="..\glm-0.9.9.8\glm\simd\platform.h" />
     <ClInclude Include="..\glm-0.9.9.8\glm\simd\trigonometric.h" />
     <ClInclude Include="..\glm-0.9.9.8\glm\simd\vector_relational.h" />
+    <ClInclude Include="BoxCollider.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DataFileHandler.h" />
     <ClInclude Include="Debug.h" />
@@ -524,6 +527,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="GL_Context.h" />
     <ClInclude Include="ModeHandler.h" />
+    <ClInclude Include="MouseRay.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderHandler.h" />
