Cleaned up matrix transforms and added sensitive move

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -9,7 +9,12 @@ Size=123,94
 Collapsed=0
 
 [Window][Editor]
-Pos=74,49
+Pos=26,27
 Size=129,114
+Collapsed=0
+
+[Window][Data]
+Pos=60,60
+Size=436,108
 Collapsed=0
 
