--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -19,7 +19,32 @@ Size=436,108
 Collapsed=0
 
 [Window][Selected Entity]
-Pos=44,128
-Size=387,71
+Pos=14,13
+Size=389,77
+Collapsed=0
+
+[Window][Entity Properties]
+Pos=23,9
+Size=387,159
+Collapsed=0
+
+[Window][WOOHOO]
+Pos=95,98
+Size=395,58
+Collapsed=1
+
+[Window][Dear ImGui Demo]
+Pos=545,54
+Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=569,109
 Collapsed=0
 
