Working on rendering meshes in ImGui

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -174,7 +174,6 @@
     <ClCompile Include="EntityHandler.cpp" />
     <ClCompile Include="GuiContext.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="GL_Context.cpp" />
     <ClCompile Include="ModeHandler.cpp" />
     <ClCompile Include="MouseRay.cpp" />
@@ -257,6 +256,7 @@
     <ClInclude Include="..\ExternalAPIs\include\ImGUI\imstb_rectpack.h" />
     <ClInclude Include="..\ExternalAPIs\include\ImGUI\imstb_textedit.h" />
     <ClInclude Include="..\ExternalAPIs\include\ImGUI\imstb_truetype.h" />
+    <ClInclude Include="..\ExternalAPIs\include\STB_IMAGE\stb_image.h" />
     <ClInclude Include="..\glm-0.9.9.8\glm\detail\compute_common.hpp" />
     <ClInclude Include="..\glm-0.9.9.8\glm\detail\compute_vector_relational.hpp" />
     <ClInclude Include="..\glm-0.9.9.8\glm\detail\qualifier.hpp" />
@@ -524,7 +524,6 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityHandler.h" />
     <ClInclude Include="GuiContext.h" />
-    <ClInclude Include="Mesh.h" />
     <ClInclude Include="GL_Context.h" />
     <ClInclude Include="ModeHandler.h" />
     <ClInclude Include="MouseRay.h" />
