Have mesh previews working

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=252,499
-Size=603,430
+Pos=104,606
+Size=724,604
 Collapsed=0
 
 [Window][Demo window]
@@ -46,5 +46,10 @@ Collapsed=0
 [Window][About Dear ImGui]
 Pos=60,60
 Size=569,109
+Collapsed=0
+
+[Window][Test]
+Pos=396,131
+Size=383,264
 Collapsed=0
 
