Cleaned up variable names and mesh previews

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -53,3 +53,13 @@ Pos=396,131
 Size=383,264
 Collapsed=0
 
+[Window][Mesh Selector]
+Pos=15,10
+Size=320,199
+Collapsed=0
+
+[Window][Mesh Preview]
+Pos=320,0
+Size=424,435
+Collapsed=0
+
