Can now select entities in game

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -55,11 +55,21 @@ Collapsed=0
 
 [Window][Mesh Selector]
 Pos=22,17
-Size=320,199
+Size=165,180
 Collapsed=0
 
 [Window][Mesh Preview]
-Pos=320,0
+Pos=165,0
 Size=424,435
+Collapsed=0
+
+[Window][basementFloor]
+Pos=21,211
+Size=318,122
+Collapsed=0
+
+[Window][woodenFloor]
+Pos=25,213
+Size=318,115
 Collapsed=0
 
